--- a/smart-materials/frontend/.env.example
+++ b/smart-materials/frontend/.env.example
@@ -1,1 +1,8 @@
-VITE_API_URL=http://localhost:5000
+# Frontend Environment Variables
+
+# Backend API URL
+# For local development:
+VITE_API_URL=http://localhost:8000
+
+# For production, set to your deployed backend URL:
+# VITE_API_URL=https://your-backend-domain.com
