--- a/smart-materials/ai-service/.env.example
+++ b/smart-materials/ai-service/.env.example
@@ -1,3 +1,12 @@
-# Google Gemini API Key
-# Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+# Groq API Key (Required)
+# Get your API key from: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# Server Configuration (Optional - defaults shown)
+PORT=8000
+HOST=0.0.0.0
+
+# CORS - Allowed Origins (comma-separated)
+# For production, set this to your frontend domain
+# Example: ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
