--- a/smart-materials/ai-service/requirements.txt
+++ b/smart-materials/ai-service/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-python-multipart==0.0.6
-pillow==10.2.0
-numpy==1.26.3
-groq==0.4.2
-python-dotenv==1.0.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+python-multipart>=0.0.6
+pillow>=10.0.0
+groq>=0.4.0
+python-dotenv>=1.0.0
 pydantic[email]>=2.0.0
